# bmstu-sem06-ppo

./: .gitignore  README.md  compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/2023_01_01_000000_create_users_table/: up.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs  repository.rs  schema.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: er.graphml  master.drawio  use-cases.graphml
