[package]
name = "stocks_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["tokio", "http1"] }
log = "0.4.26"
reqwest = { version = "0.12.14",  features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.29.1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
tower-http = { version = "0.4.1", features = ["cors"] }